--- a/public/output.css
+++ b/public/output.css
@@ -1,5 +1,5 @@
+/*! tailwindcss v4.0.3 | MIT License | https://tailwindcss.com */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@400;600&display=swap");
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.resize {
+  resize: both;
+}
