--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,93 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@400;600&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme {
+  --color-blue: #2cbce9;
+  --color-red: #dc4492;
+  --color-yellow: #fdcc49;
+  --color-grey: #ededed;
+  --color-deep-blue: #010026;
+  --color-dark-grey: #757575;
+  --color-opaque-black: rgba(0, 0, 0, 0.35);
+
+  --gradient-rainbow: linear-gradient(
+    81.66deg,
+    #00b5ee 7.21%,
+    #ff45a4 45.05%,
+    #ffba00 78.07%
+  );
+  --gradient-rainblue: linear-gradient(
+    90deg,
+    #24cbff 14.53%,
+    #fc59ff 69.36%,
+    #ffbd0c 117.73%
+  );
+
+  --font-playfair: "Playfair Display", serif;
+  --font-opensans: "Open Sans", sans-serif;
+
+  --breakpoint-xs: 480px;
+  --breakpoint-ss: 620px;
+  --breakpoint-sm: 768px;
+  --breakpoint-md: 1060px;
+  --breakpoint-lg: 1200px;
+  --breakpoint-xl: 1700px;
+}
+
+@layer utilities {
+  .text-deep-blue {
+    color: var(--color-deep-blue);
+  }
+  .bg-deep-blue {
+    background-color: var(--color-deep-blue);
+  }
+  .text-dark-grey {
+    color: var(--color-dark-grey);
+  }
+  .bg-dark-grey {
+    background-color: var(--color-dark-grey);
+  }
+
+  .bg-gradient-rainbow {
+    background-image: var(--gradient-rainbow);
+  }
+  .bg-gradient-rainblue {
+    background-image: var(--gradient-rainblue);
+  }
+
+  .font-playfair {
+    font-family: var(--font-playfair);
+  }
+  .font-opensans {
+    font-family: var(--font-opensans);
+  }
+
+  .bg-brush {
+    background-image: url("./assets/brush.png");
+  }
+  .bg-person1 {
+    background-image: url("./assets/person-1.png");
+  }
+  .bg-person2 {
+    background-image: url("./assets/person-2.png");
+  }
+  .bg-person3 {
+    background-image: url("./assets/person-3.png");
+  }
+
+  @media (min-width: var(--breakpoint-md)) {
+    .md\:text-lg {
+      font-size: 1.125rem;
+    }
+  }
+}
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  background-color: #010026;
+  @apply text-white;
+}
