--- a/public/output.css
+++ b/public/output.css
@@ -656,6 +656,9 @@
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
   }
+  .mt-7 {
+    margin-top: calc(var(--spacing) * 7);
+  }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
@@ -673,6 +676,9 @@
   }
   .mb-7 {
     margin-bottom: calc(var(--spacing) * 7);
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
   }
   .ml-20 {
     margin-left: calc(var(--spacing) * 20);
@@ -721,6 +727,9 @@
   }
   .h-full {
     height: 100%;
+  }
+  .max-h-\[400px\] {
+    max-height: 400px;
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
@@ -829,6 +838,9 @@
   .bg-deep-blue {
     background-color: var(--color-deep-blue);
   }
+  .bg-grey {
+    background-color: var(--color-grey);
+  }
   .bg-red {
     background-color: var(--color-red);
   }
@@ -844,8 +856,14 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
+  }
   .p-12 {
     padding: calc(var(--spacing) * 12);
+  }
+  .p-16 {
+    padding: calc(var(--spacing) * 16);
   }
   .px-7 {
     padding-inline: calc(var(--spacing) * 7);
@@ -871,6 +889,9 @@
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
   }
+  .pt-48 {
+    padding-top: calc(var(--spacing) * 48);
+  }
   .pr-0 {
     padding-right: calc(var(--spacing) * 0);
   }
@@ -879,6 +900,9 @@
   }
   .pb-24 {
     padding-bottom: calc(var(--spacing) * 24);
+  }
+  .pb-48 {
+    padding-bottom: calc(var(--spacing) * 48);
   }
   .text-center {
     text-align: center;
@@ -947,6 +971,9 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .opacity-0 {
+    opacity: 0%;
   }
   .ring {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
@@ -1159,6 +1186,13 @@
       }
     }
   }
+  .hover\:opacity-90 {
+    &:hover {
+      @media (hover: hover) {
+        opacity: 90%;
+      }
+    }
+  }
   .hover\:saturate-200 {
     &:hover {
       @media (hover: hover) {
@@ -1198,6 +1232,16 @@
       }
     }
   }
+  .sm\:grid {
+    @media (width >= 768px) {
+      display: grid;
+    }
+  }
+  .sm\:grid-cols-3 {
+    @media (width >= 768px) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
   .md\:order-2 {
     @media (width >= 1060px) {
       order: 2;
@@ -1226,6 +1270,16 @@
   .md\:w-1\/3 {
     @media (width >= 1060px) {
       width: calc(1/3 * 100%);
+    }
+  }
+  .md\:w-2\/4 {
+    @media (width >= 1060px) {
+      width: calc(2/4 * 100%);
+    }
+  }
+  .md\:w-2\/5 {
+    @media (width >= 1060px) {
+      width: calc(2/5 * 100%);
     }
   }
   .md\:w-3\/4 {
